--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://axelfj.github.io/reactive",
   "name": "reactivation",
   "version": "0.1.0",
   "private": true,
@@ -8,7 +9,6 @@
     "@testing-library/user-event": "^12.7.2",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.20.4",
-    "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.2",
+    "gh-pages": "^3.1.0"
   }
 }
