--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^12.20.4",
     "@types/react-dom": "^17.0.1",
+    "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.1",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
@@ -44,6 +47,8 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.2",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.7",
     "gh-pages": "^3.1.0"
   }
 }
