--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "homepage": "http://axelfj.github.io/reactive",
-  "name": "reactivation",
+  "name": "the-real-reactivation",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.2",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.20.4",
-    "@types/react-dom": "^17.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@material-ui/core": "^4.11.3",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^12.20.10",
+    "@types/react": "^17.0.3",
+    "@types/react-bootstrap": "^0.32.25",
+    "@types/react-dom": "^17.0.3",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
+    "react": "^17.0.2",
+    "react-bootstrap-validation": "^0.1.11",
+    "react-dom": "^17.0.2",
+    "react-navigation": "^4.4.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.5",
-    "web-vitals": "^1.1.0"
+    "typescript": "^4.2.4",
+    "web-vitals": "^1.1.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +49,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.2",
-    "gh-pages": "^3.1.0"
+    "@types/react-navigation": "^3.4.0",
+    "@types/react-router-dom": "^5.1.7",
+    "the-fake-backend": "^3.5.3"
   }
 }
