--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "formik": "^2.2.6",
     "react": "^17.0.2",
     "react-bootstrap-validation": "^0.1.11",
@@ -51,6 +54,7 @@
   "devDependencies": {
     "@types/react-navigation": "^3.4.0",
     "@types/react-router-dom": "^5.1.7",
+    "morgan": "^1.10.0",
     "the-fake-backend": "^3.5.3"
   }
 }
