--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-navigation": "^4.4.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "storybook": "^6.2.9",
     "typescript": "^4.2.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.1",
