--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "formik": "^2.2.6",
     "gh-pages": "^3.1.0",
     "history": "^5.0.0",
+    "mongodb": "^3.6.9",
+    "mongoose": "^5.12.15",
     "react": "^17.0.2",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
